<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_VARIABLES" Id="{f5eb425e-877f-4a98-b4fc-8b7970a753e9}">
    <Declaration><![CDATA[VAR_GLOBAL
	
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:OVERRIDE_VAC '}
	xSystemOverrideMode : BOOL; (* Global system override for the prototype section*)
	
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:AUTO_VVC_50 '}
	bAutoVVC50 : BOOL := TRUE;

	// Purge COMMANDS FROM epics
	//pragma
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:Purge_SW'}
	bStartPurge_sw : BOOL :=false;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:Purge_Active'}
	bPurgeActive : BOOL:=false;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:PurgeDone'}
	bPurgeDone : BOOL :=false;
	{attribute 'pytmc' := '
	pv: EM2K0:XGMD:GAS_TYPE ;
	type: mbbi ;
	field: ZRST none ;
	field: ONST Neon;
	field: TWST Argon ;
	field: THST Krypton ;
	field: FRST Xenon ;
	io: i
	'}
	SelectedGas: E_GasType;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>